# gemini-live-tools

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  dev.sh  gstts.sh  run.sh  test.html  test_tts_audio_player.html
.agents/skills/version-bump/: SKILL.md
.agents/skills/version-release/: SKILL.md
.claude/: settings.json
docs/: streaming-tts-endpoint.md
js/: tts-audio-player.js  voice-character-selector.js
python/: MANIFEST.in  greet_demo.py  gstts.py  pyproject.toml
python/gemini_live_tools/: __init__.py  gemini_live_api.py  math_eval.py
python/gemini_live_tools/static/: tts-audio-player.js  voice-character-selector.js
python/tests/: test_get_static_content.py
