[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-live-tools"
version = "0.2.0"
description = "Shared Gemini Live TTS API, character definitions, and safe math evaluator"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.27.0",
    "numpy>=1.26.0",
    "simple-term-menu>=1.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gemini_live_tools*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
gemini_live_tools = ["static/*.js"]
